update font and all

--- a/dotfiles/tmux/.config/tmux/tmux.conf
+++ b/dotfiles/tmux/.config/tmux/tmux.conf
@@ -24,7 +24,7 @@ bind r source-file ~/.config/tmux/tmux.conf \; display "Tmux config reloaded"
 unbind %
 unbind '"'
 bind - split-window -v -c "#{pane_current_path}"
-bind | split-window -h -c "#{pane_current_path}"
+bind \ split-window -h -c "#{pane_current_path}"
 
 # Copy Mode (vi)
 unbind v
