--- a/dotfiles/ghostty/.config/ghostty/config
+++ b/dotfiles/ghostty/.config/ghostty/config
@@ -1,4 +1,4 @@
-theme = "Nord"
+theme = Nord
 window-height = 24
 window-width = 80
 window-padding-x = 2
@@ -7,10 +7,15 @@ background-blur = true
 background-opacity = 0.94
 background-blur-radius = 60
 # background = #1a1f26
-font-family = "JetBrainsMono Nerd Font Propo"
-# font-family = "Monaspace Neon NF"
+# font-family = "JetBrainsMono Nerd Font Propo"
+font-family = "MonaspiceNe Nerd Font Propo"
+# font-family = BlexMono Nerd Font Mono
+# font-family = VictorMono Nerd Font Propo
 font-size = 13
 # font-thicken = true
-# font-thicken-strength = 200
-macos-titlebar-style = "hidden"
+# font-thicken-strength = 80
+macos-titlebar-style = hidden
 keybind = global:cmd+grave_accent=toggle_quick_terminal
+title = " "
+window-save-state = always
+adjust-cell-height = 10%
