--- a/dotfiles/tmux/.config/tmux/tmux.conf
+++ b/dotfiles/tmux/.config/tmux/tmux.conf
@@ -24,7 +24,7 @@ bind r source-file ~/.config/tmux/tmux.conf \; display "Tmux config reloaded"
 unbind %
 unbind '"'
 bind - split-window -v -c "#{pane_current_path}"
-bind \ split-window -h -c "#{pane_current_path}"
+bind \\ split-window -h -c "#{pane_current_path}"
 
 # Copy Mode (vi)
 unbind v
@@ -51,13 +51,24 @@ bind n command-prompt -p "new-session -s '%%'"
 # ====================
 # Nord Colors (Blue Variant)
 # ====================
-set -g @thm_bg "#2E3440"         # nord0
-set -g @thm_fg "#ECEFF4"         # nord6
-set -g @thm_blue "#81A1C1"       # nord9
-set -g @thm_blue_alt "#5E81AC"   # nord10
-set -g @thm_blue_glow "#88C0D0"  # brighter blue for highlights/glow
-set -g @thm_gray "#4C566A"       # nord3
-set -g @thm_darkgray "#3B4252"   # nord1
+# set -g @thm_bg "#2E3440"         # nord0
+# set -g @thm_fg "#ECEFF4"         # nord6
+# set -g @thm_blue "#81A1C1"       # nord9
+# set -g @thm_blue_alt "#5E81AC"   # nord10
+# set -g @thm_blue_glow "#88C0D0"  # brighter blue for highlights/glow
+# set -g @thm_gray "#4C566A"       # nord3
+# set -g @thm_darkgray "#3B4252"   # nord1
+
+# ====================
+# Everforest Colors (Dark Medium)
+# ====================
+set -g @thm_bg "#2D353B"         # bg0 - dark background
+set -g @thm_fg "#D3C6AA"         # fg - main foreground
+set -g @thm_blue "#7FBBB3"       # blue - primary blue
+set -g @thm_blue_alt "#3A94C5"   # blue (brighter variant)
+set -g @thm_blue_glow "#83C092"  # green - for highlights/glow (aqua-ish)
+set -g @thm_gray "#4F585E"       # bg3 - medium gray
+set -g @thm_darkgray "#343F44"   # bg1 - darker gray
 
 
 # ====================
