--- a/dotfiles/ghostty/.config/ghostty/config
+++ b/dotfiles/ghostty/.config/ghostty/config
@@ -20,3 +20,5 @@ keybind = global:cmd+grave_accent=toggle_quick_terminal
 title = " "
 window-save-state = always
 # adjust-cell-height = 10%
+keybind = alt+left=unbind
+keybind = alt+right=unbind
